# @file
# @author LKostyra (costyrra.xl@gmail.com)
# @brief  CMake for RendererDemo

MESSAGE("Generating Makefile for RendererDemo")

SET(NFE_RENDERER_DEMO_DIRECTORY ${NFE_APPS_DIRECTORY}/RendererDemo)

FILE(GLOB NFRENDERERDEMO_SOURCES *.cpp)
FILE(GLOB NFRENDERERDEMO_HEADERS *.hpp)
FILE(GLOB NFRENDERERDEMO_SCENE_SOURCES Scenes/*.cpp)
FILE(GLOB NFRENDERERDEMO_SCENE_HEADERS Scenes/*.hpp)

# Search for dependencies
PKG_CHECK_MODULES(NFRENDERERDEMO_DEPS REQUIRED
                  xcb)

# setup directories
INCLUDE_DIRECTORIES(${NFE_RENDERER_DEMO_DIRECTORY}
                    ${NFE_SRC_DIRECTORY}
                    ${NFE_ROOT_DIRECTORY}/nfEngineDeps/
                    ${NFRENDERERDEPS_DEPS_INCLUDE_DIRS})
LINK_DIRECTORIES(${NFEDEPS_LIB_DIRECTORY}
                 ${NFE_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(RendererDemo
    ${NFRENDERERDEMO_SOURCES} ${NFRENDERERDEMO_HEADERS} ${NFRENDERERDEMO_SCENE_SOURCES} ${NFRENDERERDEMO_SCENE_HEADERS})

SET_TARGET_PROPERTIES(RendererDemo PROPERTIES LINK_FLAGS "-pthread")

ADD_DEPENDENCIES(RendererDemo Common)
TARGET_LINK_LIBRARIES(RendererDemo Common dl ${NFRENDERERDEMO_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET RendererDemo POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:RendererDemo>
                                                    ${NFE_OUTPUT_DIRECTORY}/${targetfile})
