# @file
# @author LKostyra (costyrra.xl@gmail.com)
# @brief  CMake for RendererDemo

MESSAGE("Generating Makefile for RendererDemo")

SET(NFE_RENDERER_DEMO_DIRECTORY ${NFE_APPS_DIRECTORY}/RendererDemo)

FILE(GLOB NFRENDERERDEMO_SOURCES *.cpp)
FILE(GLOB NFRENDERERDEMO_HEADERS *.hpp)
FILE(GLOB NFRENDERERDEMO_SCENE_SOURCES Scenes/*.cpp)
FILE(GLOB NFRENDERERDEMO_SCENE_HEADERS Scenes/*.hpp)

# Search for dependencies
PKG_CHECK_MODULES(NFRENDERERDEMO_DEPS REQUIRED
                  xcb
)

ADD_EXECUTABLE(RendererDemo
    ${NFRENDERERDEMO_SOURCES} ${NFRENDERERDEMO_HEADERS} ${NFRENDERERDEMO_SCENE_SOURCES} ${NFRENDERERDEMO_SCENE_HEADERS}
)

TARGET_INCLUDE_DIRECTORIES(RendererDemo
    PRIVATE ${NFE_RENDERER_DEMO_DIRECTORY}
    PRIVATE ${NFE_SRC_DIRECTORY}
    PRIVATE ${NFRENDERERDEMO_DEPS_INCLUDE_DIRS}
    PRIVATE ${NFEDEPS_ROOT_DIRECTORY}
)

TARGET_LINK_DIRECTORIES(RendererDemo
    PRIVATE ${NFEDEPS_LIB_DIRECTORY}
    PRIVATE ${NFE_OUTPUT_DIRECTORY}
)

SET_TARGET_PROPERTIES(RendererDemo PROPERTIES LINK_FLAGS "-pthread")

TARGET_PRECOMPILE_HEADERS(RendererDemo PRIVATE PCH.hpp)

ADD_DEPENDENCIES(RendererDemo Common)
TARGET_LINK_LIBRARIES(RendererDemo Common dl ${NFRENDERERDEMO_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET RendererDemo POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:RendererDemo>
                                                    ${NFE_OUTPUT_DIRECTORY}/${targetfile})
