MESSAGE("Generating Makefile for Raytracer")

SET(NFE_RAYTRACER_DIRECTORY ${NFE_ENGINE_DIRECTORY}/Raytracer)

FILE(GLOB_RECURSE RAYTRACER_SOURCES *.cpp)
FILE(GLOB_RECURSE RAYTRACER_HEADERS *.hpp)
FILE(GLOB_RECURSE RAYTRACER_EXTERNAL_TINYEXR_SOURCES ${NFE_ROOT_DIRECTORY}/nfEngineDeps/tinyexr/*.cc)

# setup directories
INCLUDE_DIRECTORIES(
    ${NFE_RAYTRACER_DIRECTORY}
    ${NFE_ROOT_DIRECTORY}/nfEngineDeps
    ${NFE_SRC_DIRECTORY}
)

LINK_DIRECTORIES(${NFEDEPS_LIB_DIRECTORY} ${NFE_OUTPUT_DIRECTORY})

ADD_LIBRARY(Raytracer SHARED
    ${RAYTRACER_SOURCES}
    ${RAYTRACER_EXTERNAL_TINYEXR_SOURCES}
    ${RAYTRACER_EXTERNAL_IMGUI_SOURCES}
)

TARGET_LINK_LIBRARIES(Raytracer Common)

TARGET_PRECOMPILE_HEADERS(Raytracer PRIVATE PCH.h)

ADD_CUSTOM_COMMAND(TARGET Raytracer POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:Raytracer> ${NFE_OUTPUT_DIRECTORY}/${targetfile})